--- a/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -5,6 +5,6 @@
 
     <!-- You can insert your own image assets here -->
    <item>
-    <bitmap android:gravity="center" android:src="@drawable/transparent" />
+    <bitmap android:gravity="center" android:src="@drawable/splash" />
 </item>
 </layer-list>
